feat(i18n): localize siderbar and serp widgets
