# server/app/src/main/kotlin/mu/muse/usecase/scenario/instrument/CreateInstrumentUseCase.kt
@@ -6,9 +6,9 @@ import mu.muse.domain.instrument.Instrument
 import mu.muse.domain.instrument.InstrumentId
 import mu.muse.domain.instrument.InstrumentName
 import mu.muse.domain.instrument.InstrumentBase64Photo
+import mu.muse.domain.instrument.Manufacturer
 import mu.muse.domain.instrument.ManufacturerDate
-import mu.muse.domain.instrument.ManufacturerType
-import mu.muse.domain.instrument.MaterialType
+import mu.muse.domain.instrument.Material
 import mu.muse.domain.instrument.ReleaseDate
 import mu.muse.usecase.CreateInstrument
 import mu.muse.usecase.access.instrument.InstrumentPersister
@@ -21,11 +21,11 @@ class CreateInstrumentUseCase(
     override fun execute(
         instrumentName: InstrumentName,
         instrumentType: Instrument.Type,
-        manufacturerType: ManufacturerType,
+        manufacturerType: Manufacturer.Type,
         manufactureDate: ManufacturerDate,
         releaseDate: ReleaseDate,
         country: Country,
-        materialTypes: List<MaterialType>,
+        materialTypes: List<Material.Type>,
         photo: InstrumentBase64Photo,
     ) {
         val instrument = Instrument.create(
